# tez_-al-mas-

./: README.md
Geant4_5/: CMakeLists.txt  main.cc  vis.mac
Geant4_5/include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  TankSD.hh
Geant4_5/src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  TankSD.cc
